--- a/style.css
+++ b/style.css
@@ -6,5 +6,6 @@
   }
 
   body {
+    font-family: 'Merriweather Sans', sans-serif;
     background-color: var(--body-bg-color); /*Invocação da variável*/
   }
