--- a/style.css
+++ b/style.css
@@ -16,25 +16,30 @@
 
   .container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 20vh 70vh 10vh;
+
+    grid-template-areas: "h h"
+                          "a m"
+                          "f f"
   }
 
   header {
     background-color: yellow;
-    height: 100px;
+    grid-area: h;
   }
 
   main {
     background-color: red;
-    height: 100px;
+    grid-area: m;
   }
 
   aside {
     background-color: aqua;
-    height: 100px;
+    grid-area: a;
   }
 
   footer {
     background-color: white;
-    height: 100px;
+    grid-area: f;
   }
